--- a/index.html
+++ b/index.html
@@ -3,84 +3,83 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sanjeev There | Personal Space</title>
+  <title>Sanjuthere.in – Passion, Work & Drive</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
-    * {margin:0; padding:0; box-sizing:border-box;}
-    body {font-family: 'Poppins', sans-serif; background:#0a0a0a; color:#f0f0f0;}
-    header {background:#111; padding:20px 50px; display:flex; justify-content:space-between; align-items:center; box-shadow:0 2px 10px rgba(0,0,0,0.6);}
-    header h1 {font-size:1.5rem; color:#00ffd5; letter-spacing:1px;}
-    nav a {color:#f0f0f0; margin:0 15px; text-decoration:none; font-weight:500; transition:0.3s;}
-    nav a:hover {color:#00ffd5;}
-    section {padding:80px 10%;}
-    .hero {height:90vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;}
-    .hero h2 {font-size:3rem; color:#00ffd5;}
-    .hero p {margin-top:20px; font-size:1.2rem; max-width:700px;}
-    .btn {display:inline-block; margin-top:30px; padding:12px 25px; background:#00ffd5; color:#000; border-radius:30px; text-decoration:none; font-weight:600; transition:0.3s;}
-    .btn:hover {background:#fff;}
-    .about, .portfolio, .contact {max-width:1000px; margin:auto;}
-    .about p {line-height:1.7; margin-top:20px;}
-    .portfolio-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px; margin-top:40px;}
-    .project {background:#1a1a1a; padding:20px; border-radius:12px; transition:0.3s;}
-    .project:hover {transform:translateY(-5px); box-shadow:0 5px 15px rgba(0,255,213,0.2);}
-    .contact form {display:flex; flex-direction:column; gap:15px; margin-top:30px;}
-    input, textarea {padding:12px; border:none; border-radius:8px; background:#222; color:#fff;}
-    input[type="submit"] {background:#00ffd5; color:#000; cursor:pointer; font-weight:600;}
-    footer {text-align:center; padding:20px; background:#111; color:#777;}
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; scroll-behavior: smooth; }
+    body { background-color: #0e0e0e; color: white; line-height: 1.6; transition: background 0.5s; }
+    header { background: linear-gradient(90deg, #ff6b00, #ff9500); padding: 20px; text-align: center; position: sticky; top: 0; z-index: 100; }
+    header h1 { font-size: 2rem; color: white; }
+    nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: 500; position: relative; }
+    nav a::after { content: ''; display: block; height: 2px; background: #fff; width: 0; transition: width 0.3s; position: absolute; bottom: -5px; left: 0; }
+    nav a:hover::after { width: 100%; background: #ff9500; }
+    section { padding: 60px 20px; text-align: center; opacity: 0; transform: translateY(30px); animation: fadeInUp 1s forwards; margin-bottom: 40px; }
+    section:nth-of-type(1) { animation-delay: 0.2s; }
+    section:nth-of-type(2) { animation-delay: 0.4s; }
+    section:nth-of-type(3) { animation-delay: 0.6s; }
+    section:nth-of-type(4) { animation-delay: 0.8s; }
+    h2 { color: #ff9500; margin-bottom: 20px; }
+    .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 30px; }
+    .gallery img { width: 100%; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.5); transition: transform 0.4s, box-shadow 0.4s; cursor: pointer; }
+    .gallery img:hover { transform: scale(1.07) rotate(-1deg); box-shadow: 0 8px 25px rgba(255,149,0,0.6); }
+    footer { background: #111; padding: 25px; text-align: center; font-size: 0.9rem; color: #bbb; }
+    footer a { color: #ff9500; text-decoration: none; }
+    @keyframes fadeInUp { to { opacity: 1; transform: translateY(0); } }
+    .btn { display: inline-block; padding: 12px 25px; margin-top: 20px; background: #ff9500; color: #0e0e0e; font-weight: 600; border-radius: 30px; text-decoration: none; transition: 0.3s; }
+    .btn:hover { background: #fff; color: #ff9500; transform: scale(1.05); }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Sanjeev There</h1>
+    <h1>Welcome to Sanjuthere.in</h1>
     <nav>
-      <a href="#home">Home</a>
       <a href="#about">About</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#zumba">Zumba</a>
+      <a href="#driving">Driving</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section class="hero" id="home">
-    <h2>Hello, I'm Sanjeev 👋</h2>
-    <p>A passionate, energetic individual who loves dancing, Zumba, and exploring creative paths like acting, modeling, and leadership. Welcome to my world!</p>
-    <a href="#about" class="btn">Discover More</a>
-  </section>
-
-  <section class="about" id="about">
+  <section id="about">
     <h2>About Me</h2>
-    <p>I'm a 46-year-old dreamer from Hyderabad, India, who believes life is about staying active, expressive, and positive. Whether it’s Zumba, public speaking, or exploring opportunities across the globe, I love staying on the move. This site is my little digital space to express my journey and inspirations.</p>
+    <p>Hi, I'm Sanjeev — passionate about movement, health, creativity, and adventure.  
+    This space reflects my love for staying active and enjoying life’s energy in full throttle.</p>
+    <a href="#zumba" class="btn">See Zumba</a>
   </section>
 
-  <section class="portfolio" id="portfolio">
-    <h2>My Portfolio</h2>
-    <div class="portfolio-grid">
-      <div class="project">
-        <h3>Zumba Journey</h3>
-        <p>Spreading joy through rhythm and movement — staying fit while having fun!</p>
-      </div>
-      <div class="project">
-        <h3>Acting & Modeling</h3>
-        <p>Exploring creative expression through visual storytelling and camera presence.</p>
-      </div>
-      <div class="project">
-        <h3>Leadership & Speaking</h3>
-        <p>Motivating people to find energy, focus, and positivity through powerful communication.</p>
-      </div>
+  <section id="zumba">
+    <h2>Zumba & Fitness</h2>
+    <p>I enjoy dancing and do Zumba daily to stay fit and energetic.  
+    Movement keeps the mind sharp and the soul happy.</p>
+    <div class="gallery">
+      <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?auto=format&fit=crop&w=800&q=60" alt="Zumba Dance">
+      <img src="https://images.unsplash.com/photo-1605296867304-42c36f5f5d4a?auto=format&fit=crop&w=800&q=60" alt="Dance energy">
+      <img src="https://images.unsplash.com/photo-1552058544-f2b08422138a?auto=format&fit=crop&w=800&q=60" alt="Workout mood">
     </div>
   </section>
 
-  <section class="contact" id="contact">
+  <section id="driving">
+    <h2>Driving & Off-Road Adventures</h2>
+    <p>Driving is my freedom — from highways to mountain roads, I love exploring the world on wheels.  
+    Adventure begins when the road ends!</p>
+    <div class="gallery">
+      <img src="https://images.unsplash.com/photo-1533473359331-0135ef1b58bf?auto=format&fit=crop&w=800&q=60" alt="Bike Adventure">
+      <img src="https://images.unsplash.com/photo-1523961131990-5ea7c61b2107?auto=format&fit=crop&w=800&q=60" alt="Offroad driving">
+      <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?auto=format&fit=crop&w=800&q=60" alt="Biker energy">
+      <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?auto=format&fit=crop&w=800&q=60" alt="Adventure ride">
+    </div>
+  </section>
+
+  <section id="contact">
     <h2>Contact</h2>
-    <p>Have an idea, collaboration, or just want to say hi? Reach out below.</p>
-    <form action="https://formspree.io/f/maylwjrb" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="4" placeholder="Your Message"></textarea>
-      <input type="submit" value="Send Message">
-    </form>
+    <p>For collaborations, ideas, or just to say hi — reach out anytime!</p>
+    <p>Email: <a href="mailto:contact@sanjuthere.in">contact@sanjuthere.in</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Sanjeev There. All Rights Reserved.</p>
+    <p>© 2025 Sanjuthere.in — Powered by GitHub Pages | <a href="https://github.com/sanjuthere/sanjuthere.in">View on GitHub</a></p>
   </footer>
+
 </body>
 </html>
