--- a/index.html
+++ b/index.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- republish trigger -->
-  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sanjeev There | Personal Space</title>
+  <title>SANJUTHERE.IN | Innovation in Motion</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>Sanjeev There</h1>
+    <a href="#home" class="logo-link">
+      <img src="images/logo.png" alt="SANJUTHERE.IN Logo" class="site-logo">
+    </a>
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#portfolio">Gallery</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <section class="hero" id="home">
-    <h2>Hello, I'm Sanjeev 👋</h2>
-    <p>A passionate, energetic individual who loves dancing, Zumba, and exploring creative paths like acting, modeling, and leadership. Welcome to my world!</p>
-    <a href="#about" class="btn">Discover More</a>
-  </section>
-
-  <section class="about" id="about">
-    <h2>About Me</h2>
-    <p>I'm a 46-year-old dreamer from Hyderabad, India, who believes life is about staying active, expressive, and positive. Whether it’s Zumba, public speaking, or exploring opportunities across the globe, I love staying on the move. This site is my little digital space to express my journey and inspirations.</p>
-  </section>
-
-  <section class="portfolio" id="portfolio">
-    <h2>My Portfolio</h2>
-    <div id="imageGallery" class="portfolio-grid">
-      <!-- Images auto-loaded by script.js -->
+    <div class="hero-content">
+      <h1 class="glow-text">SANJUTHERE.IN</h1>
+      <p class="tagline">Innovation in Motion</p>
+      <p class="intro">I’m <strong>Sanjeev There</strong> — an energetic dreamer, dancer, Zumba lover, and explorer of creativity, leadership, and life!</p>
+      <a href="#portfolio" class="btn">Explore My World</a>
     </div>
+  </section>
+
+  <section id="portfolio">
+    <h2 class="gallery-title">My Gallery</h2>
+    <div class="slideshow-container" id="slideshow"></div>
   </section>
 
   <section class="contact" id="contact">
     <h2>Contact</h2>
-    <p>Have an idea, collaboration, or just want to say hi? Reach out below.</p>
     <form action="https://formspree.io/f/maylwjrb" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
@@ -49,7 +44,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Sanjeev There. All Rights Reserved.</p>
+    <p>© 2025 Sanjeev There | Innovation in Motion</p>
   </footer>
 
   <script src="js/script.js"></script>
