--- a/index.html
+++ b/index.html
@@ -4,47 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SANJUTHERE.IN | Innovation in Motion</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <a href="#home" class="logo-link">
-      <img src="images/logo.png" alt="SANJUTHERE.IN Logo" class="site-logo">
-    </a>
+    <div class="logo-container">
+      <a href="#home">
+        <img src="images/logo-for-sanjuthere-in-1.jpg" alt="Sanjuthere Logo" class="logo">
+      </a>
+      <h1>SANJUTHERE.IN</h1>
+    </div>
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
-      <a href="#portfolio">Gallery</a>
+      <a href="#gallery">Gallery</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <section class="hero" id="home">
-    <div class="hero-content">
-      <h1 class="glow-text">SANJUTHERE.IN</h1>
-      <p class="tagline">Innovation in Motion</p>
-      <p class="intro">I’m <strong>Sanjeev There</strong> — an energetic dreamer, dancer, Zumba lover, and explorer of creativity, leadership, and life!</p>
-      <a href="#portfolio" class="btn">Explore My World</a>
+    <div id="slideshow" class="slideshow"></div>
+    <div class="overlay">
+      <h2>Welcome to Sanjeev There’s World</h2>
+      <p>Innovation, Movement, and Inspiration — all in one place.</p>
     </div>
   </section>
 
-  <section id="portfolio">
-    <h2 class="gallery-title">My Gallery</h2>
-    <div class="slideshow-container" id="slideshow"></div>
+  <section class="about" id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm Sanjeev — a passionate creator, dancer, and dreamer from Hyderabad, India.
+      I believe in living life through expression, motion, and connection.
+      This website reflects my energy, journey, and creativity.
+    </p>
   </section>
 
   <section class="contact" id="contact">
     <h2>Contact</h2>
     <form action="https://formspree.io/f/maylwjrb" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="4" placeholder="Your Message"></textarea>
-      <input type="submit" value="Send Message">
+      <input type="submit" value="Send Message" />
     </form>
   </section>
 
   <footer>
-    <p>© 2025 Sanjeev There | Innovation in Motion</p>
+    <p>© 2025 Sanjeev There | Innovation in Motion.</p>
   </footer>
 
   <script src="js/script.js"></script>
