--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
 </head>
 <body>
   <header>
-    <div class="logo-container">
-      <a href="#home">
-        <img src="images/logo-for-sanjuthere-in-1.jpg" alt="Sanjuthere Logo" class="logo">
-      </a>
-      <h1>SANJUTHERE.IN</h1>
-    </div>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+  <a href="#home" class="brand">
+    <img src="images/logo.png" alt="Sanjuthere Logo" class="logo">
+    <img src="images/sanjuthere-metal.jpg" alt="Sanjuthere Text" class="logo-text">
+  </a>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
 
   <section class="hero" id="home">
     <div id="slideshow" class="slideshow"></div>
