--- a/index.html
+++ b/index.html
@@ -1,54 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SANJUTHERE.IN | Innovation in Motion</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>SANJUTHERE.IN — Innovation in Motion</title>
+
   <link rel="stylesheet" href="css/style.css" />
+  <!-- Poppins from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-  <a href="#home" class="brand">
-    <img src="images/logo.png" alt="Sanjuthere Logo" class="logo">
-    <img src="images/sanjuthere-metal.jpg" alt="Sanjuthere Text" class="logo-text">
-  </a>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+  <!-- Header / Banner -->
+  <header class="site-header">
+    <a class="brand" href="#home" aria-label="Home">
+      <img src="images/logo.png" alt="Sanjuthere Logo" class="brand-logo">
+      <img src="images/sanjuthere-metal.jpg" alt="Sanjuthere Text" class="brand-text">
+    </a>
 
-  <section class="hero" id="home">
-    <div id="slideshow" class="slideshow"></div>
-    <div class="overlay">
-      <h2>Welcome to Sanjeev There’s World</h2>
-      <p>Innovation, Movement, and Inspiration — all in one place.</p>
+    <nav class="main-nav" aria-label="Main navigation">
+      <a href="#home">Home</a>
+      <a href="#services">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero / Intro -->
+  <main>
+    <section id="home" class="hero">
+      <div class="hero-inner">
+        <h1>Sanjeev There</h1>
+        <p class="subtitle">Cloud & DevOps Engineer — 15+ years in IT, 4 years specializing in Cloud & DevOps</p>
+        <p class="lead">I help startups and businesses automate, deploy, and scale reliably — CI/CD, cloud migrations, monitoring, and managed DevOps.</p>
+        <div class="hero-cta">
+          <a class="btn primary" href="#contact">Hire Me</a>
+          <a class="btn ghost" href="#services">View Services</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Two-column: slideshow (left) + quote box (right) -->
+    <section id="gallery" class="media-quote-section">
+      <div class="media-left">
+        <h2 class="section-title">Visual Gallery</h2>
+        <div id="slideshow" class="slideshow small"></div>
+        <p class="hint">Images auto-loaded from /images (drop new images & add name to images.json)</p>
+      </div>
+
+      <aside class="quote-right">
+        <h3 class="quote-title">Thoughts & Insights</h3>
+        <div id="quoteBox" class="quote-box">
+          <!-- quotes inserted by JS -->
+        </div>
+        <div class="quote-controls">
+          <button id="prevQuote" class="small">⟨ Prev</button>
+          <button id="nextQuote" class="small">Next ⟩</button>
+        </div>
+      </aside>
+    </section>
+
+    <!-- Services -->
+    <section id="services" class="services">
+      <h2 class="section-title centered">Services I Offer</h2>
+      <div class="cards">
+        <article class="card">
+          <h4>Quick DevOps Audit</h4>
+          <p>1–2 day assessment with clear remediation steps and cost/performance estimates.</p>
+          <p class="price">₹5k–₹15k / $100–$200</p>
+        </article>
+
+        <article class="card">
+          <h4>CI/CD & Automation</h4>
+          <p>Build reliable pipelines (GitHub Actions, Jenkins), containerization (Docker) and deployment automation.</p>
+          <p class="price">₹25k–₹60k / $300–$700</p>
+        </article>
+
+        <article class="card">
+          <h4>Managed DevOps (Retainer)</h4>
+          <p>Ongoing monitoring, backups, security, and improvements — weekly reports and support.</p>
+          <p class="price">₹30k–₹1L / $400–$1200</p>
+        </article>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="about">
+      <h2 class="section-title centered">About Me</h2>
+      <p class="about-text">I’m Sanjeev — 15+ years in the IT industry with 4 years focused on cloud & DevOps. I combine practical engineering with leadership experience to deliver production-ready systems that are maintainable, cost-efficient and secure.</p>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="contact">
+      <h2 class="section-title centered">Contact / Hire</h2>
+      <p class="lead centered">Ready to start? Email <a href="mailto:hello@sanjuthere.in">hello@sanjuthere.in</a> or use the form below.</p>
+
+      <form class="contact-form" action="https://formspree.io/f/maylwjrb" method="POST">
+        <input type="text" name="name" placeholder="Your name" required>
+        <input type="email" name="email" placeholder="Your email" required>
+        <input type="text" name="company" placeholder="Company (optional)">
+        <textarea name="message" rows="5" placeholder="Tell me about your project..." required></textarea>
+        <div class="form-row">
+          <button type="submit" class="btn primary">Send Message</button>
+          <a class="btn ghost" href="mailto:hello@sanjuthere.in">Email Directly</a>
+        </div>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div>© 2025 SANJUTHERE.IN — Innovation in Motion</div>
+      <div class="small">Hyderabad, India · Available worldwide</div>
     </div>
-  </section>
-
-  <section class="about" id="about">
-    <h2>About Me</h2>
-    <p>
-      I'm Sanjeev — a passionate creator, dancer, and dreamer from Hyderabad, India.
-      I believe in living life through expression, motion, and connection.
-      This website reflects my energy, journey, and creativity.
-    </p>
-  </section>
-
-  <section class="contact" id="contact">
-    <h2>Contact</h2>
-    <form action="https://formspree.io/f/maylwjrb" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="4" placeholder="Your Message"></textarea>
-      <input type="submit" value="Send Message" />
-    </form>
-  </section>
-
-  <footer>
-    <p>© 2025 Sanjeev There | Innovation in Motion.</p>
   </footer>
 
   <script src="js/script.js"></script>
