--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="media-left">
         <h2 class="section-title">Visual Gallery</h2>
         <div id="slideshow" class="slideshow small"></div>
-        <p class="hint">Images auto-loaded from /images (drop new images & add name to images.json)</p>
+        <p class="hint"></p>
       </div>
 
       <aside class="quote-right">
