--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <a class="brand" href="#home" aria-label="Home">
       <img src="images/logo.png" alt="Sanjuthere Logo" class="brand-logo">
-      <img src="images/sanjuthere-metal.jpg" alt="Sanjuthere Text" class="brand-text">
+      <img src="images/sanjuthere-metal.png" alt="Sanjuthere Text" class="brand-text">
     </a>
 
     <nav class="main-nav" aria-label="Main navigation">
