--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="media-left">
         <h2 class="section-title">Container Visuals & Project Gallery</h2>
         <div id="slideshow" class="slideshow small" aria-live="polite"></div>
-        <p class="hint">Images and renders are auto-loaded from <code>/images/images.json</code>. Add new filenames there to include them in the gallery.</p>
+        <p class="hint"></p>
       </div>
 
       <aside class="quote-right">
