--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="logo-banner">
       <img src="images/logo.png" alt="Sanjuthere Logo" class="logo">
-      <img src="images/sanjuthere-banner.jpg" alt="Sanjuthere Metallic Banner" class="banner-img">
+      <img src="images/sanjuthere-metal.png" alt="Sanjuthere Metallic Banner" class="banner-img">
     </div>
     <nav class="navbar">
       <a href="#home">Home</a>
