--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
       </div>
     </div>
   </section>
-
+   <!-- Two-column: slideshow (left) + quote box (right) -->
+    <section id="gallery" class="media-quote-section">
+      <div class="media-left">
+        <h2 class="section-title">Visual Gallery</h2>
+        <div id="slideshow" class="slideshow small"></div>
+        <p class="hint">Images auto-loaded from /images (drop new images & add name to images.json)</p>
+      </div>
   <section id="portfolio" class="portfolio">
     <h2>Our Work</h2>
     <div class="dual-section">
