--- a/index.html
+++ b/index.html
@@ -49,22 +49,19 @@
       </div>
     </div>
   </section>
-   <!-- Two-column: slideshow (left) + quote box (right) -->
-    <section id="gallery" class="media-quote-section">
-      <div class="media-left">
-        <h2 class="section-title">Visual Gallery</h2>
-        <div id="slideshow" class="slideshow small"></div>
-        <p class="hint">Images auto-loaded from /images (drop new images & add name to images.json)</p>
-      </div>
+
+  <!-- Gallery + Quotes -->
   <section id="portfolio" class="portfolio">
     <h2>Our Work</h2>
     <div class="dual-section">
+      <!-- Left: Image Slider -->
       <div class="slider-box">
-        <div id="imageGallery" class="portfolio-grid">
-          <!-- Images auto-loaded by script.js -->
-        </div>
+        <div id="slideshow" class="slideshow"></div>
+        <p class="hint">Image Gallery</p>
       </div>
-      <div class="quote-box">
+
+      <!-- Right: Quotes -->
+      <div class="quote-box" id="quoteBox">
         <p class="animated-quote">"Precision, strength, and design — the foundation of every container we build."</p>
       </div>
     </div>
