--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Left: Image Slider -->
       <div class="slider-box">
         <div id="slideshow" class="slideshow"></div>
-        <p class="hint">Image Gallery)</p>
+        <p class="hint"></p>
       </div>
 
       <!-- Right: Quotes -->
