--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="dual-section">
       <!-- Left: Image Slider -->
       <div class="slider-box">
-        <div id="slideshow" class="slideshow"></div>
+        <div id="slideshow" class="slideshow small">
         <p class="hint"></p>
       </div>
 
