--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sanjeev There | Container Engineering & Fabrication</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header class="header">
     <div class="logo-banner">
-      <img src="images/logo.png" alt="Sanjuthere Logo" class="logo">
-      <img src="images/sanjuthere-metal.png" alt="Sanjuthere Metallic Banner" class="banner-img">
+      <img src="images/logo.png" alt="Sanjuthere Logo" class="logo" />
+      <img src="images/sanjuthere-metal.png" alt="Sanjuthere Metallic Banner" class="banner-img" />
     </div>
     <nav class="navbar">
       <a href="#home">Home</a>
@@ -50,18 +50,13 @@
     </div>
   </section>
 
-  <!-- Gallery + Quotes -->
   <section id="portfolio" class="portfolio">
     <h2>Our Work</h2>
     <div class="dual-section">
-      <!-- Left: Image Slider -->
       <div class="slider-box">
-        <div id="slideshow" class="slideshow small">
-        <p class="hint"></p>
+        <div id="slideshow" class="slideshow small"></div>
       </div>
-
-      <!-- Right: Quotes -->
-      <div class="quote-box" id="quoteBox">
+      <div class="quote-box">
         <p class="animated-quote">"Precision, strength, and design — the foundation of every container we build."</p>
       </div>
     </div>
@@ -71,10 +66,10 @@
     <h2>Contact Us</h2>
     <p>Get in touch for container fabrication, engineering design, or industrial projects. Let's build something solid together.</p>
     <form action="https://formspree.io/f/maylwjrb" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
-      <input type="submit" value="Send Message">
+      <input type="submit" value="Send Message" />
     </form>
   </section>
 
