--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </p>
   </footer>
 
-  <!-- Security script -->
+  <!-- Protection Script -->
   <script>
     document.addEventListener('contextmenu', event => event.preventDefault());
     document.addEventListener('keydown', event => {
