--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sanjuthere Agro Exports — Procurement & Global Export</title>
-  <meta name="description" content="Sanjuthere Agro Exports — sourcing, packaging and export of agricultural products." />
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="images/logo.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sanjuthere Agro Exports — Procurement & Export</title>
+  <meta name="description" content="Sanjuthere Agro Exports — procurement, packaging and export of fruits, vegetables, spices and agricultural produce." />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="container nav-content">
+    <div class="container nav-inner">
       <div class="logo-section">
-        <a href="#home" class="brand-link">
-          <img src="images/logo.png" alt="Sanjuthere Logo" class="logo">
-        </a>
+        <img src="images/logo.png" alt="Sanjuthere Logo" class="logo" onerror="this.style.display='none'">
         <div class="brand">
-          <h1 class="brand-name" data-key="brandName">Sanjuthere Agro Exports</h1>
-          <p class="tagline" data-key="tagline">Harvesting Quality • Delivering Globally</p>
+          <h1 class="brand-name">Sanjuthere Agro Exports</h1>
+          <p class="tagline">Harvesting Quality • Delivering Globally</p>
         </div>
       </div>
 
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="#home" data-key="navHome">Home</a></li>
-          <li><a href="#services" data-key="navServices">Services</a></li>
-          <li><a href="#gallery" data-key="navGallery">Gallery</a></li>
-          <li><a href="#products" data-key="navProducts">Products</a></li>
-          <li><a href="#contact" data-key="navContact">Contact</a></li>
-        </ul>
+      <nav class="nav-menu" id="navMenu">
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#products">Products</a>
+        <a href="#contact">Contact</a>
       </nav>
 
-      <div class="header-actions">
-        <button id="langToggle" class="lang-btn"><span id="currentLang">EN</span></button>
-        <button id="mobileMenuToggle" class="mobile-menu-toggle" aria-label="Toggle Menu"><span></span><span></span><span></span></button>
+      <div class="actions">
+        <!-- WhatsApp link will be set by JS (number is hidden in source) -->
+        <a class="btn btn-whatsapp social-link-whatsapp" target="_blank" rel="noopener">WhatsApp Inquiry</a>
       </div>
     </div>
   </header>
@@ -42,113 +37,93 @@
   <!-- Hero -->
   <section id="home" class="hero">
     <div class="hero-content container">
-      <h2 class="hero-title" data-key="heroTitle">Your Reliable Partner in Agricultural Procurement & Global Export</h2>
-      <p class="hero-subtitle" data-key="heroSubtitle">We specialize in sourcing, processing, and delivering the finest agricultural products — from farms to international markets.</p>
+      <h2 class="hero-title">Your Reliable Partner in Agricultural Procurement & Global Export</h2>
+      <p class="hero-subtitle">Sourcing, packaging and exporting quality agricultural products — from farms to international markets.</p>
       <div class="hero-cta">
-        <a href="#contact" class="btn btn-primary" data-key="ctaInquiry">Send Inquiry</a>
-        <a id="whatsappBtn" class="btn btn-whatsapp" target="_blank" rel="noopener" aria-label="WhatsApp">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347"/></svg>
-          <span data-key="ctaWhatsapp">WhatsApp Inquiry</span>
-        </a>
+        <a href="#contact" class="btn btn-primary">Send Inquiry</a>
+        <a class="btn btn-ghost" href="#gallery">View Gallery</a>
       </div>
     </div>
   </section>
 
-  <!-- Services -->
+  <!-- Services (kept concise) -->
   <section id="services" class="services section">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title" data-key="servicesTitle">Our Services</h2>
-        <p class="section-subtitle" data-key="servicesSubtitle">Comprehensive agricultural solutions from farm to global market</p>
-      </div>
+      <h2 class="section-title">Our Services</h2>
+      <p class="section-subtitle">Procurement • Quality Inspection • Packaging • Logistics • Export Documentation</p>
       <div class="services-grid">
-        <div class="service-card"><div class="service-icon">🌾</div><h3 data-key="svc1Title">Product Procurement & Sourcing</h3><p data-key="svc1Desc">Partnering directly with farmers for authentic, fresh produce.</p></div>
-        <div class="service-card"><div class="service-icon">📦</div><h3 data-key="svc2Title">Packaging & Quality Inspection</h3><p data-key="svc2Desc">Ensuring export-grade handling and certified quality standards.</p></div>
-        <div class="service-card"><div class="service-icon">🚚</div><h3 data-key="svc3Title">Logistics</h3><p data-key="svc3Desc">Sea, air, and road — with tracking and timely delivery.</p></div>
-        <div class="service-card"><div class="service-icon">📋</div><h3 data-key="svc4Title">Export Documentation</h3><p data-key="svc4Desc">End-to-end compliance, certifications, and documentation.</p></div>
+        <div class="service-card"><div class="service-icon">🌾</div><h3>Procurement & Sourcing</h3><p>Direct from farmers with quality checks.</p></div>
+        <div class="service-card"><div class="service-icon">📦</div><h3>Packaging</h3><p>Export-grade packaging & labeling.</p></div>
+        <div class="service-card"><div class="service-icon">🚚</div><h3>Logistics</h3><p>Domestic & international shipping coordination.</p></div>
+        <div class="service-card"><div class="service-icon">📋</div><h3>Documentation</h3><p>Customs, certifications, and export paperwork.</p></div>
       </div>
     </div>
   </section>
 
-  <!-- Gallery (Option A: category-aware, replacing old slideshow) -->
+  <!-- Gallery: 4 categories -->
   <section id="gallery" class="gallery section">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title" data-key="galleryTitle">Our Operations</h2>
-        <p class="section-subtitle" data-key="gallerySubtitle">From Indian soil to global shelves</p>
+        <h2 class="section-title">Our Gallery</h2>
+        <p class="section-subtitle">Explore our farming operations, fruits, vegetables and spices — ready for export.</p>
       </div>
 
-      <!-- Category Controls -->
-      <div class="category-controls" id="categoryControls" aria-label="Category Filters"></div>
+      <!-- Category Tabs -->
+      <div class="gallery-tabs">
+        <button class="gallery-tab active" data-category="farming">Farming & Cultivation</button>
+        <button class="gallery-tab" data-category="fruits">Fruits</button>
+        <button class="gallery-tab" data-category="vegetables">Vegetables</button>
+        <button class="gallery-tab" data-category="spices">Spices & Dry Products</button>
+      </div>
 
-      <!-- Gallery viewer area -->
-      <div class="gallery-content" id="galleryContent">
+      <!-- Viewer & Quote -->
+      <div class="gallery-content">
         <div class="gallery-viewer">
-          <div id="galleryGrid" class="gallery-grid"></div>
+          <div class="slideshow-container" id="slideshowContainer" aria-live="polite"></div>
+          <button class="slide-nav prev" id="prevBtn" aria-label="Previous">❮</button>
+          <button class="slide-nav next" id="nextBtn" aria-label="Next">❯</button>
+          <div class="slide-dots" id="slideDots" aria-hidden="false"></div>
         </div>
+
         <div class="quote-box">
           <div class="quote-icon">❝</div>
           <p class="quote-text" id="quoteText">From Indian soil to global shelves.</p>
+          <div class="quote-animation" aria-hidden="true"></div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Products -->
+  <!-- Products & Contact (kept simple) -->
   <section id="products" class="products section">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title" data-key="productsTitle">Our Product Catalog</h2>
-        <p class="section-subtitle" data-key="productsSubtitle">Premium agricultural products sourced from the finest farms</p>
-      </div>
-      <div class="products-grid">
-        <div class="product-card"><div class="product-image">🌿</div><h3 data-key="prodMoringa">Moringa</h3><p data-key="prodMoringaDesc">Organic moringa leaves and powder</p></div>
-        <div class="product-card"><div class="product-image">🍚</div><h3 data-key="prodRice">Basmati Rice</h3><p data-key="prodRiceDesc">Premium long-grain basmati rice</p></div>
-        <div class="product-card"><div class="product-image">🥭</div><h3 data-key="prodMango">Fresh Mangoes</h3><p data-key="prodMangoDesc">Alphonso and other varieties</p></div>
-        <div class="product-card"><div class="product-image">🧅</div><h3 data-key="prodOnion">Red Onions</h3><p data-key="prodOnionDesc">Fresh red onions in bulk</p></div>
-      </div>
+      <h2 class="section-title">Products</h2>
+      <p class="section-subtitle">Moringa • Basmati Rice • Mango • Lychee • Onions • Makhana • Vegetables • Spices</p>
     </div>
   </section>
 
-  <!-- Contact -->
   <section id="contact" class="contact section">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title" data-key="contactTitle">Get In Touch</h2>
-        <p class="section-subtitle" data-key="contactSubtitle">For bulk orders or custom procurement requests, please include product details and destination.</p>
-      </div>
-
-      <div class="contact-content">
-        <form id="contactForm" class="contact-form" action="https://formspree.io/f/maylwjrb" method="POST">
-          <div class="form-group"><label data-key="labelName" for="name">Your Name</label><input id="name" name="name" placeholder="John Doe" required></div>
-          <div class="form-group"><label data-key="labelEmail" for="email">Your Email</label><input id="email" type="email" name="email" placeholder="john@example.com" required></div>
-          <div class="form-group"><label data-key="labelMessage" for="message">Your Message</label><textarea id="message" name="message" rows="5" placeholder="Tell us about your requirements..." required></textarea></div>
-          <button type="submit" class="btn btn-primary" data-key="sendMessage">Send Message</button>
-        </form>
-      </div>
+      <h2 class="section-title">Get In Touch</h2>
+      <p class="section-subtitle">For bulk orders or custom procurement requests, please include product details and destination.</p>
+      <form action="https://formspree.io/f/maylwjrb" method="POST" class="contact-form" id="contactForm">
+        <div class="form-group"><label for="name">Your Name</label><input id="name" name="name" required placeholder="John Doe"></div>
+        <div class="form-group"><label for="email">Your Email</label><input id="email" name="email" type="email" required placeholder="john@example.com"></div>
+        <div class="form-group"><label for="message">Your Message</label><textarea id="message" name="message" rows="5" required placeholder="Tell us about your requirements..."></textarea></div>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+      </form>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="container footer-content">
-      <div class="footer-info">
-        <p data-key="footerText">© 2025 Sanjuthere Agro Exports | Procurement • Packaging • Export</p>
-      </div>
+      <div class="footer-info">© 2025 Sanjuthere Agro Exports | Procurement • Packaging • Export</div>
       <div class="footer-social">
-        <a id="waf" class="social-link" aria-label="WhatsApp" target="_blank" rel="noopener"></a>
-        <a href="mailto:exports@sanjuthere.in" class="social-link" aria-label="Email">✉️</a>
+        <a class="social-link social-link-whatsapp" target="_blank" rel="noopener" aria-label="WhatsApp">WhatsApp</a>
+        <a href="mailto:exports@sanjuthere.in" class="social-link" aria-label="Email">Email</a>
       </div>
     </div>
   </footer>
-
-  <!-- Lightbox (hidden by default) -->
-  <div id="lightbox" class="lightbox" aria-hidden="true">
-    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <button id="lbPrev" class="lb-nav lb-prev" aria-label="Previous">❮</button>
-    <div id="lbImgWrap" class="lb-imgwrap"><img id="lbImg" alt=""></div>
-    <button id="lbNext" class="lb-nav lb-next" aria-label="Next">❯</button>
-  </div>
 
   <script src="js/script.js"></script>
 </body>
