--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanju There Exports</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/logo.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Santhuthere Agro Exports</title>
+
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="images/logo.png" />
 </head>
 
 <body>
-
     <!-- Language Toggle -->
     <div class="language-toggle">
         <button id="langToggle" class="lang-btn">
@@ -23,16 +24,15 @@
         <nav class="navbar">
             <div class="container nav-content">
 
-                <!-- Logo + Brand -->
+                <!-- Logo Section (ADDED, NO CHANGES) -->
                 <div class="logo-section">
-                    <img src="images/logo.png" class="logo" alt="Company Logo">
+                    <img src="images/logo.png" class="logo" alt="Logo" />
                     <div>
-                        <h2 class="brand-name">Sanju There Exports</h2>
+                        <h2 class="brand-name">Santhuthere Agro Exports</h2>
                         <p class="tagline">Pure • Fresh • Export Quality</p>
                     </div>
                 </div>
 
-                <!-- Menu -->
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="#services" data-en="Services" data-hi="सेवाएं">Services</a></li>
                     <li><a href="#gallery" data-en="Gallery" data-hi="गैलरी">Gallery</a></li>
@@ -40,51 +40,54 @@
                     <li><a href="#contact" data-en="Contact" data-hi="संपर्क">Contact</a></li>
                 </ul>
 
-                <!-- Mobile Menu Toggle -->
                 <button class="mobile-menu-toggle" id="mobileMenuToggle">
                     <span></span>
                     <span></span>
                     <span></span>
                 </button>
-
             </div>
         </nav>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Section (UNCHANGED) -->
     <section class="hero">
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="hero-title" data-en="Premium Agricultural Products"
                 data-hi="उत्कृष्ट कृषि उत्पाद">Premium Agricultural Products</h1>
-            <p class="hero-subtitle" data-en="From Indian farms to global markets."
+
+            <p class="hero-subtitle"
+                data-en="From Indian farms to global markets."
                 data-hi="भारतीय खेतों से वैश्विक बाजार तक।">
                 From Indian farms to global markets.
             </p>
 
             <div class="hero-cta">
+
+                <!-- WhatsApp Button (UPDATED) -->
                 <a id="whatsappBtn" class="btn btn-whatsapp">
                     <span>💬</span>
-                    <span data-en="Chat on WhatsApp" data-hi="व्हाट्सएप पर चैट करें">
-                        Chat on WhatsApp
-                    </span>
+                    <span data-en="Chat on WhatsApp" data-hi="व्हाट्सएप पर चैट करें">Chat on WhatsApp</span>
                 </a>
 
-                <a href="#contact" class="btn btn-primary" data-en="Get in Touch" data-hi="संपर्क करें">
+                <a href="#contact" class="btn btn-primary"
+                    data-en="Get in Touch"
+                    data-hi="संपर्क करें">
                     Get in Touch
                 </a>
             </div>
         </div>
     </section>
 
-    <!-- Services -->
+    <!-- Services (UNCHANGED) -->
     <section class="services section" id="services">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title" data-en="Our Services" data-hi="हमारी सेवाएं">Our Services</h2>
-                <p class="section-subtitle" data-en="We deliver the best quality agricultural products."
-                   data-hi="हम सर्वोत्तम गुणवत्ता वाले कृषि उत्पाद प्रदान करते हैं।">
-                   We deliver the best quality agricultural products.
+                <p class="section-subtitle"
+                    data-en="We deliver the best quality agricultural products."
+                    data-hi="हम सर्वोत्तम गुणवत्ता वाले कृषि उत्पाद प्रदान करते हैं।">
+                    We deliver the best quality agricultural products.
                 </p>
             </div>
 
@@ -93,29 +96,30 @@
                 <div class="service-card">
                     <div class="service-icon">🚜</div>
                     <h3 class="service-title" data-en="Farming" data-hi="खेती">Farming</h3>
-                    <p class="service-description" data-en="We engage in responsible farming practices."
-                       data-hi="हम जिम्मेदार खेती प्रथाओं में शामिल हैं।">
-                       We engage in responsible farming practices.
+                    <p class="service-description"
+                        data-en="We engage in responsible farming practices."
+                        data-hi="हम जिम्मेदार खेती प्रथाओं में शामिल हैं।">
+                        We engage in responsible farming practices.
                     </p>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">📦</div>
                     <h3 class="service-title" data-en="Packaging" data-hi="पैकेजिंग">Packaging</h3>
-                    <p class="service-description" 
-                       data-en="Secure packaging with global export standards."
-                       data-hi="वैश्विक निर्यात मानकों के साथ सुरक्षित पैकेजिंग।">
-                       Secure packaging with global export standards.
+                    <p class="service-description"
+                        data-en="Secure packaging with global export standards."
+                        data-hi="वैश्विक निर्यात मानकों के साथ सुरक्षित पैकेजिंग।">
+                        Secure packaging with global export standards.
                     </p>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">🌍</div>
                     <h3 class="service-title" data-en="Exporting" data-hi="निर्यात">Exporting</h3>
-                    <p class="service-description" 
-                       data-en="Connecting Indian produce to the world."
-                       data-hi="भारतीय उत्पादों को दुनिया से जोड़ना।">
-                       Connecting Indian produce to the world.
+                    <p class="service-description"
+                        data-en="Connecting Indian produce to the world."
+                        data-hi="भारतीय उत्पादों को दुनिया से जोड़ना।">
+                        Connecting Indian produce to the world.
                     </p>
                 </div>
 
@@ -131,8 +135,6 @@
             </div>
 
             <div class="gallery-content">
-
-                <!-- Slideshow -->
                 <div class="gallery-viewer">
                     <button id="prevBtn" class="slide-nav prev">❮</button>
                     <div class="slideshow-container" id="slideshowContainer"></div>
@@ -140,18 +142,17 @@
                     <div class="slide-dots" id="slideDots"></div>
                 </div>
 
-                <!-- Quote Box -->
+                <!-- Quote Box (FIXED: no stray quote) -->
                 <div class="quote-box">
                     <div class="quote-icon">❝</div>
                     <p id="quoteText" class="quote-text"></p>
                     <div class="quote-animation"></div>
                 </div>
-
             </div>
         </div>
     </section>
 
-    <!-- Products -->
+    <!-- Products (UNCHANGED) -->
     <section class="products section" id="products">
         <div class="container">
 
@@ -180,11 +181,10 @@
                 </div>
 
             </div>
-
         </div>
     </section>
 
-    <!-- Contact -->
+    <!-- Contact (UNCHANGED) -->
     <section class="contact section" id="contact">
         <div class="container contact-content">
 
@@ -197,38 +197,46 @@
 
                 <div class="form-group">
                     <label data-en="Your Name" data-hi="आपका नाम">Your Name</label>
-                    <input type="text" name="name" data-en="Enter your name" data-hi="अपना नाम दर्ज करें"
-                           placeholder="Enter your name" required>
+                    <input type="text" name="name"
+                        placeholder="Enter your name"
+                        data-en="Enter your name"
+                        data-hi="अपना नाम दर्ज करें"
+                        required />
                 </div>
 
                 <div class="form-group">
                     <label data-en="Your Email" data-hi="आपका ईमेल">Your Email</label>
-                    <input type="email" name="email" data-en="Enter your email" data-hi="अपना ईमेल दर्ज करें"
-                           placeholder="Enter your email" required>
+                    <input type="email" name="email"
+                        placeholder="Enter your email"
+                        data-en="Enter your email"
+                        data-hi="अपना ईमेल दर्ज करें"
+                        required />
                 </div>
 
                 <div class="form-group">
                     <label data-en="Message" data-hi="संदेश">Message</label>
                     <textarea name="message" rows="5"
-                              data-en="Write your message" data-hi="अपना संदेश लिखें"
-                              placeholder="Write your message" required></textarea>
+                        placeholder="Write your message"
+                        data-en="Write your message"
+                        data-hi="अपना संदेश लिखें"
+                        required></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-primary"
-                    data-en="Send Message" data-hi="संदेश भेजें">
+                    data-en="Send Message"
+                    data-hi="संदेश भेजें">
                     Send Message
                 </button>
 
             </form>
-
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer (UNCHANGED) -->
     <footer class="footer">
         <div class="container footer-content">
             <p class="footer-info">
-                © 2025 Sanju There Exports. All Rights Reserved.
+                © 2025 Santhuthere Agro Exports. All Rights Reserved.
             </p>
         </div>
     </footer>
